<resources>
    <string name="app_name">Diploma</string>
    <string name="left"><![CDATA[<<=]]></string>
    <string name="right"><![CDATA[=>>]]></string>
    <string name="course_name">Название курса</string>
    <string name="avaliable_courses">Доступные обучающие программы</string>
    <string name="topics_list">Список тем</string>
    <string name="contiue_course">Продолжить курс</string>
    <string name="number">number</string>
    <string name="topic_name">topic_name</string>
    <string name="sign_in">Вход</string>
    <string name="sign_up">Регистрация</string>
    <string name="settings">Аккаунт</string>
    <string name="account">Информация об аккаунте</string>
    <string name="username">Имя пользователя : </string>
    <string name="email">Email : </string>
    <string name="sign_up_a_new_user">Регистрация нового пользователя</string>
    <string name="email_sign_up">EMail</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="finish_sign_up">Завершить регистрацию</string>
    <string name="logout">Выйти</string>
    <string name="title_activity_user_step_results">UserStepResultsActivity</string>
    <string name="show_results">Показать результаты</string>
    <string name="topic_number">topic number</string>
    <string name="step_1">Шаг 1</string>
    <string name="correct">correct</string>
    <string name="title_activity_steps_tabs">StepsTabsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="login">Логин</string>
    <string name="surname">Фамилия</string>
    <string name="step_number">Номер шага</string>
    <string name="result">Результат</string>
    <string name="education_place">Место обучения</string>
    <string name="loading___">Загрузка...</string>
</resources>
