<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login"
    android:orientation="vertical"
    tools:context=".Activities.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_signin_image"
        tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/base_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#80000000"
            android:textColor="#000"
            android:layout_marginBottom="@dimen/base_margin"
            android:text="@string/sign_up_a_new_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <customfonts.MyEditText
                android:id="@+id/et_email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="16dp"
                android:hint="@string/email_sign_up"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <customfonts.MyEditText
                android:id="@+id/et_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/lockers"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <customfonts.MyEditText
                android:id="@+id/et_confirm_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/lockers"
                android:drawablePadding="16dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_passwords_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <customfonts.MyEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/usrusr"
                android:drawablePadding="16dp"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <customfonts.MyEditText
                android:id="@+id/et_user_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/usrusr"
                android:drawablePadding="16dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/base_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_confirm_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btnformate"
                android:textSize="16dp"
                android:textColor="#fff"
                android:padding="10dp"
                android:text="@string/finish_sign_up" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>